<resources>
    <string name="app_name">ScBleSdkAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_video">Video</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="connect_device">Connect device</string>
    <string name="stop_scan">Stop scan</string>
    <string name="connect_state">Connection status</string>
    <string name="unbind_failed">Unbind failed</string>
    <string name="scan_device">Find device</string>
    <string name="tips">Tips</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="request_location_premisson">Scanning Bluetooth device needs to open the location function permission.</string>
    <string name="request_location_ble_premisson">Scanning Bluetooth devices requires the "Connect Nearby Devices" feature permission</string>
    <string name="ble_location_permission">Your location permission is currently turned off, and you must first enable the [Location] permission in System Settings-Application-Pregnant Orange-Permissions before you can use the service normally~</string>
    <string name="ble_device_permission">Your nearby Bluetooth device permission is currently turned off, and you must first turn on the [Nearby Bluetooth Device] permission in System Settings-Application-Pregnant Orange-Permissions before you can use the service normally~</string>
    <string name="location_service_turn_on">The location service is enabled</string>
    <string name="location_service_turn_off">The location service is not enabled</string>
    <string name="request_location_premisson_tips">Please turn on the Bluetooth of your phone, otherwise you cannot connect the device.</string>
    <string name="sync_time">Sync Time</string>
    <string name="sync_unit_c">Sync Unit ℃</string>
    <string name="sync_unit_f">Sync Unit ℉</string>
    <string name="sync_data">Sync Data</string>
    <string name="disconnect">Disconnect</string>
    <string name="search">Search</string>
    <string name="title_select_thermometer">Select your device</string>
    <string name="error_ble_scan">Fail to scan Bluetooth devices</string>
    <string name="last_used">Last used</string>
    <string name="permission_denied">Permission denied</string>
    <string name="not_data_record">not data</string>
    <string name="get_time">Get time</string>
    <string name="get_measure_time">get measure time</string>
    <string name="set_measuring_time">set measuring time</string>
    <string name="set_preheat_time">set preheat time</string>
    <string name="get_history_data">get history data</string>
    <string name="clear_history_data">clear history data</string>
    <string name="input_measure_time">input measuring time</string>
    <string name="input_preheat_time">input preheat time</string>
    <string name="get_measure_mode">get measure mode</string>
    <string name="set_measure_mode1">set measure mode1</string>
    <string name="set_measure_mode2">set measure mode2</string>
    <string name="set_measure_mode3">set measure mode3</string>
    <string name="get_unit">get unit</string>
    <string name="get_power">get power</string>
    <string name="ota_upgrade">OTA Upgrade</string>
    <string name="oad_upgrade">OAD Upgrade</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_file_failed">Audio file error!</string>
    <string name="ble_connect_timeout">Bluetooth connection timed out, please try to restart Bluetooth manually and scan again!</string>
    <string name="ble_device_much">There are too many Bluetooth devices in the surrounding environment and it takes longer to scan</string>
    <string name="ble_mode">Bluetooth mode</string>
    <string name="ble_refuse_start">You have refused to turn on Bluetooth!</string>
    <string name="ble_retry">If you fail to reconnect several times, you can try to restart the phone’s Bluetooth and APP!</string>
    <string name="ble_scan_again">Rescanning, please wait…</string>
    <string name="ble_scan_failed">Bluetooth is abnormal, you can try to restart the phone\'s Bluetooth and APP!</string>
    <string name="ble_scan_start">Bluetooth scanning is on!</string>
    <string name="ble_scan_timeout">The Bluetooth scan timed out, the device was not found, please click to scan again!</string>
    <string name="ble_switch_isClose">Bluetooth switch is not turned on!</string>
    <string name="bpm">Times/minute</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="confirm">confirm</string>
    <string name="connected">Device connected!</string>
    <string name="delete">delete</string>
    <string name="delete_failed">failed to delete!</string>
    <string name="delete_history">Whether to delete this record？</string>
    <string name="delete_succeed">successfully deleted!</string>
    <string name="disconnected">Device disconnected!</string>
    <string name="exit_app">Whether to withdraw from fetal heart rate monitoring？</string>
    <string name="exit_if_recording">Please stop recording first!</string>
    <string name="fhr">Fetal Heart Rate</string>
    <string name="free_space_insufficient">There is less than 60MB of free space, unable to record!</string>
    <string name="history">History record</string>
    <string name="isCancel">You canceled!</string>
    <string name="monitor">Fetus heart monitor care</string>
    <string name="monitor_time">Duration</string>
    <string name="no_ble_permission">Bluetooth requires location permission, please go to settings to enable!</string>
    <string name="no_history">No records</string>
    <string name="no_line_permission">Please enable recording permission!</string>=
    <string name="phone_have_ble">Mobile phone supports BLE</string>
    <string name="phone_no_ble">Mobile phone not supports BLE</string>
    <string name="quickening">Fetal Movement Mark</string>
    <string name="quickening_num">Fetal movements</string>
    <string name="quickening_prompt">Record fetal movement every 5 seconds!</string>
    <string name="record">Start recording</string>
    <string name="recordEnd_if_disconnected">The connection is interrupted, whether to save the recorded data？</string>
    <string name="recordEnd_if_end">After the recording, whether to save the data？</string>
    <string name="recordEnd_if_leave">Fetal heart rate monitoring is interrupted, whether to save the recorded data？</string>
    <string name="recordStart">Recording starts!</string>
    <string name="recordStop">Stop recording</string>
    <string name="save">Save</string>
    <string name="save_failed">Save failed!</string>
    <string name="save_succeed">Saved successfully!</string>
    <string name="start_flag">Start</string>
    <string name="ununited">The device is not connected!</string>
    <string name="unsupported_device">Unsupported device</string>
    <string name="record_time">Record time:</string>
    <string name="bind_device">The device is not bound, do you want to bind it?</string>
    <string name="personal_my_device_bind">Bind</string>
    <string name="turn_on_ble_hint">Please turn on the phone bluetooth</string>
    <string name="turn_on_thermometer">Press the power button</string>
    <string name="check_device_version">Device program version verification</string>
    <string name="unbind_success">Unbind successfully</string>
    <string name="bind_success">Bind successfully</string>
    <string name="binding">binding...</string>

    <string name="open_location_hint">open Location Service</string>
    <string name="locaiton_server_hint">you can search and connect thermometer equipment.</string>
    <string name="open_location_server_success">location service open</string>
    <string name="open_locaiton_service_fail">location service open fail</string>
    <string name="authorize">Authorization</string>

    <string name="device_upate_tips">Your device program is not up to date, please click "OK" to update the device program!</string>
    <string name="firmware_update_title">The device is being upgraded</string>
    <string name="firmware_update_content">In order to ensure a good Bluetooth connection, please always keep the pregnant orange displayed on the screen, please do not turn off the device</string>
    <string name="oad">Update</string>
    <string name="oad_scan_str">Please open device, scanning...</string>
    <string name="oad_device_found">Device found, connecting...</string>
    <string name="oad_check_ver">Device connected, checking the latest firmware version...</string>
    <string name="oad_disconnected">Device disconnected!</string>
    <string name="get_firmver_fail">Check firmware version failed, please check your network!</string>
    <string name="oad_unSupported">Found your firmware version is :%s, which OAD is not supported!</string>
    <string name="need_oad">Found newer firmware version: %s, download to update!</string>
    <string name="already_latest_ver">The current firmware is already the latest version!</string>
    <string name="oad_start">Start OAD</string>
    <string name="oading">Firmware is upgrading...</string>
    <string name="oading_time">Time in total: %d sec, left %1$d sec</string>
    <string name="oad_check_success">Checking if OAD is successful, please wait...</string>
    <string name="oad_check_succ_g23">Checking if OAD is successful, please restart device...</string>
    <string name="oad_suceess">Firmware is successfully </string>
    <string name="oad_fail">Firmware upgrade failed!</string>
    <string name="macAddress">MAC Address:</string>
    <string name="deviceVersion">Version:</string>
    <string name="bbt_valid_value_post_fail">Temperature reading too high. Please take your temperature again.</string>
    <string name="save_image_to_local">Save Image</string>
    <string name="service">service</string>
</resources>
