<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_find_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_device" />

    <Button
        android:id="@+id/btn_stop_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_scan" />

    <Button
        android:id="@+id/btn_connect_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_device" />


    <Button
        android:id="@+id/btn_connect_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_state" />

    <Button
        android:id="@+id/btn_sync_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_time" />

    <Button
        android:id="@+id/btn_sync_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_unit" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/device_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/temp_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
