<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.blesdkdemo.view.TopBar
        android:id="@+id/topBar"
        style="@style/ToolBarStyle"
        custom:midText="@string/personal_my_device_bind" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:drawableTop="@drawable/device_binding_page_pic_success"
        android:drawablePadding="18dp"
        android:text="@string/bind_success"
        android:textColor="@color/app_primary_dark_color" />

    <Button
        android:id="@+id/btn_finish"
        style="@style/commonButtonCornerStyle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/ok"
        android:textSize="18sp" />
</RelativeLayout>

