<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.example.blesdkdemo.txy.ui.FHRMonitorView
            android:id="@+id/monitorView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monitor_time"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quickening_num"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_monitor_time"
                style="@style/fragment_main_monitor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00:00" />

            <TextView
                android:id="@+id/tv_quickening_num"
                style="@style/fragment_main_monitor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageView
                    android:id="@+id/iv_fhr_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_fhr"
                    android:visibility="invisible"
                    android:tint="@color/app_primary_dark_color"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_FHR"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:gravity="center"
                android:textColor="@color/app_primary_dark_color"
                android:textSize="60sp" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/bpm"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="bottom|center_vertical|center_horizontal|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_quickening"
                style="@style/fragment_main_btn"
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:text="@string/quickening" />

            <View
                android:layout_width="56dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/btn_switch"
                style="@style/fragment_main_btn"
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:text="@string/record" />
        </LinearLayout>

        <View
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone" />
    </LinearLayout>
</layout>
